# uv-tele

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
migrations/: 001_telemetry_tables.sql  002_analytics_views.sql
src/: aggregator.rs  api.rs  db.rs  main.rs  models.rs  simulator.rs  store.rs
